@@ -4642,6 +4642,8 @@ v0.33.20        10-Feb-2002
 		the first aka is not the aka in the areas.
 		In mgr result reports, lines with connected areas do now also
 		display the aka to which they are connected.
+		The file forward function now always puts a 8.3 filename in
+		the outgoing ticfile. For most files nothing is changed.
 
 	mball:
 		Will not crash anymore when it needs more then 10 minutes to
